@@ -150,7 +150,7 @@ var vboxSnapshotButtons = [
 								if(typeof callback == 'function') { callback(pres); }
 	
 							},'progress_snapshot_create_90px.png',trans('Take a snapshot of the current virtual machine state','VBoxSnapshotsWgt'),
-								vm.name, true);
+								vm.name);
 							
 						} else {
 
@@ -185,12 +185,6 @@ var vboxSnapshotButtons = [
   	  			
 
 				$(this).dialog('close');
-	 	  		
-				// Remove snapshots
-				$('#vboxSnapshotList').children().remove();
-				
-				// Append spinner
-				$('#vboxSnapshotList').append($('<li />').attr({'class':'last'}).html("<div><img src='images/spinner.gif'></div>"));
 
 				
   			};
@@ -241,18 +235,12 @@ var vboxSnapshotButtons = [
 									// Let events get picked up. Nothing to do here
 
 								},'progress_snapshot_restore_90px.png',trans('Restore Snapshot','VBoxSnapshotsWgt'),
-									vm.name, true);
+									vm.name);
 							} else if(d && d.error) {
 								vboxAlert(d.error);
 							}
 			 	  		},{'vm':vm.id,'snapshot':snapshot.id});
 
-						// Remove snapshots
-						$('#vboxSnapshotList').children().remove();
-						
-						// Append spinner
-						$('#vboxSnapshotList').append($('<li />').attr({'class':'last'}).html("<div><img src='images/spinner.gif'></div>"));
-						
 						l.run();										
 
 					};
@@ -278,19 +266,13 @@ var vboxSnapshotButtons = [
 								// Let events get picked up. Nothing to do here
 								
 							},'progress_snapshot_restore_90px.png',trans('Restore Snapshot','VBoxSnapshotsWgt'),
-								vm.name, true);
+								vm.name);
 						} else if(d && d.error) {
 							vboxAlert(d.error);
 						}
 		 	  		},{'vm':vm.id,'snapshot':snapshot.id});
 		  	  		$(this).empty().remove();
 
-					// Remove snapshots
-					$('#vboxSnapshotList').children().remove();
-					
-					// Append spinner
-					$('#vboxSnapshotList').append($('<li />').attr({'class':'last'}).html("<div><img src='images/spinner.gif'></div>"));
-					
 					l.run();				
 			
 				};
@@ -320,16 +302,10 @@ var vboxSnapshotButtons = [
 							// Let events get picked up. Nothing to do here
 							
 						},'progress_snapshot_discard_90px.png',trans('Delete Snapshot','VBoxSnapshotsWgt'),
-							vm.name + ' - ' + snapshot.name, true);
+							vm.name + ' - ' + snapshot.name);
 					}
 	 	  		},{'vm':vm.id,'snapshot':snapshot.id});
 	  	  		$(this).empty().remove();
-
-	  	  		// Remove snapshots
-				$('#vboxSnapshotList').children().remove();
-				
-				// Append spinner
-				$('#vboxSnapshotList').append($('<li />').attr({'class':'last'}).html("<div><img src='images/spinner.gif'></div>"));
 
 				l.run();				
 			};
@@ -364,7 +340,9 @@ var vboxSnapshotButtons = [
   		'name' : 'show_snapshot_details',
   		'label' : trans('Show Details','VBoxSnapshotsWgt'),
   		'icon' : 'show_snapshot_details',
-  		'enabled' : function(item) { return (item && $(item).data('vboxSnapshot') && $(item).data('vboxSnapshot').name && $(item).data('vboxSnapshot').state != 'current'); },
+  		'enabled' : function(item) {
+  			return (item && $(item).data('vboxSnapshot') && $(item).data('vboxSnapshot').name && $(item).data('vboxSnapshot').state != 'current');
+  		},
   		'click' : function () {
 
   			// Current snapshot
